--- a/apps/api-gateway/package.json
+++ b/apps/api-gateway/package.json
@@ -1,8 +1,22 @@
 {
-  "name": "@chat-app/api-gateway",
-  "version": "0.0.1",
-  "private": true,
+  "name": "api-gateway",
+  "version": "1.0.0",
+  "description": "API Gateway for Chat App",
+  "main": "dist/index.js",
+  "scripts": {
+    "build": "tsc -p tsconfig.app.json",
+    "start": "node dist/main.js",
+    "dev": "ts-node src/main.ts"
+  },
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.18.2",
+    "cors": "^2.8.5"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@types/cors": "^2.8.13",
+    "@types/node": "^20.5.0",
+    "typescript": "^5.1.6",
+    "ts-node": "^10.9.1"
   }
 }
