--- a/apps/api-gateway/package.json
+++ b/apps/api-gateway/package.json
@@ -9,14 +9,17 @@
     "dev": "ts-node src/main.ts"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "http-proxy-middleware": "^3.0.5",
+    "morgan": "^1.10.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17",
     "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/morgan": "^1.9.10",
     "@types/node": "^20.5.0",
-    "typescript": "^5.1.6",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6"
   }
 }
