--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "private": true,
   "dependencies": {
     "axios": "^1.6.0",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "morgan": "^1.10.1"
   },
   "devDependencies": {
     "@nx/express": "21.5.3",
@@ -20,8 +21,9 @@
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
-    "@types/express": "^4.17.21",
-    "@types/node": "20.19.9",
+    "@types/express": "^4.17.23",
+    "@types/morgan": "^1.9.10",
+    "@types/node": "^20.19.9",
     "nx": "21.5.3",
     "react-refresh": "^0.10.0",
     "tslib": "^2.3.0",
